--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "eslint": "^9.7.0",
         "eslint-plugin-vue": "^9.27.0",
         "rollup": "^4.18.1",
+        "rollup-plugin-scss": "^4.0.0",
         "rollup-plugin-serve": "^1.1.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-vue": "^6.0.0"
+        "rollup-plugin-vue": "^6.0.0",
+        "sass": "^1.77.8"
     },
     "dependencies": {
         "vue": "^3.4.31"
