--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@babel/eslint-parser": "^7.24.8",
         "@babel/preset-env": "^7.24.8",
         "@rollup/plugin-babel": "^6.0.4",
+        "@rollup/plugin-commonjs": "^26.0.1",
         "@rollup/plugin-eslint": "^9.0.5",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-terser": "^0.4.4",
